Fix breakpoint marker visibility

--- a/styles/php-debug.atom-text-editor.less
+++ b/styles/php-debug.atom-text-editor.less
@@ -1,6 +1,7 @@
 @import "ui-variables";
 
-.gutter>.line-numbers>.php-debug-breakpoint {
+.gutter>.line-numbers>.php-debug-breakpoint,
+.gutter>.line-numbers>.tile>.php-debug-breakpoint {
     color: #fff;
     background-color: #0F0 !important;
 }
